--- a/.web_package/config.yml
+++ b/.web_package/config.yml
@@ -8,4 +8,5 @@ preserve_patch_zero: true
 push_master: true
 push_tags: true
 remote: origin
-version_file: loft_core_cypress_selector.info.yml
+version_file: .web_package/config.yml
+version: 0.0.1
