Add unit tests and update dependencies for LoftCoreCypressSelector
Introduced unit tests for the LoftCoreCypressSelector class to ensure functionality and robustness. Updated the composer.json to include autoload-dev and require-dev configurations for PHPUnit and dom-testing-selectors, facilitating development and testing. Also, removed a default parameter in getAttributeValue to enforce stricter input handling.

--- a/composer.json
+++ b/composer.json
@@ -1,20 +1,29 @@
 {
-    "name": "aklump/loft-core-cypress-selector",
-    "description": "{{ description }}",
-    "homepage": "https://github.com/aklump/loft-core-cypress-selector",
-    "authors": [
-        {
-            "name": "Aaron Klump",
-            "homepage": "https://www.intheloftstudios.com",
-            "role": "Senior Developer"
-        }
-    ],
-    "autoload": {
-        "psr-4": {
-            "AKlump\\DomTestingSelectors\\Selector\\": "src/"
-        }
-    },
-    "require": {
-        "aklump/bem": "^0.0"
+  "name": "aklump/loft-core-cypress-selector",
+  "description": "{{ description }}",
+  "homepage": "https://github.com/aklump/loft-core-cypress-selector",
+  "authors": [
+    {
+      "name": "Aaron Klump",
+      "homepage": "https://www.intheloftstudios.com",
+      "role": "Senior Developer"
     }
+  ],
+  "autoload": {
+    "psr-4": {
+      "AKlump\\DomTestingSelectors\\Selector\\": "src/"
+    }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "AKlump\\DomTestingSelectors\\Tests\\Unit\\": "./tests_unit"
+    }
+  },
+  "require": {
+    "aklump/bem": "^0.0"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "^9.6",
+    "aklump/dom-testing-selectors": "^0.0"
+  }
 }
